--- a/src/Components/ApplicationComponents/GraphComponent/ZoneGraph.module.css
+++ b/src/Components/ApplicationComponents/GraphComponent/ZoneGraph.module.css
@@ -1,4 +1,4 @@
-.dgm-header {
+.zoneHeader {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -6,29 +6,27 @@
   color: #2c3e50;
 }
 
-.dgm-header-icon {
+.zoneHeaderIcon {
   width: 22px;
   height: 22px;
   filter: drop-shadow(1px 1px 2px #aaa);
 }
 
-.dgm-header-title {
+.zoneHeaderTitle {
   color: #2D2D2D;
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
 }
 
-.Dgm_graph {
-border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.00);
-  background: rgba(255, 255, 255, 0.30);
-
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.14),
-              0 0 2px 0  rgba(52, 37, 255, 1) ;  
+.zoneGraph {
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0);
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 
+    0 8px 16px rgba(0, 0, 0, 0.14),
+    0 0 2px rgba(52, 37, 255, 1);
   backdrop-filter: blur(9.1px);
-  padding: 0px 12px;
+  padding: 0 12px;
   transition: all 0.2s ease-in-out;
 }
-
-
