--- a/src/Components/ApplicationComponents/GraphComponent/DgmGraph.module.css
+++ b/src/Components/ApplicationComponents/GraphComponent/DgmGraph.module.css
@@ -1,32 +1,40 @@
-.dgmHeader {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-weight: 600;
-  color: #2c3e50;
+.dgm_graph {
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0);
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(9.1px);
+  transition: all 0.2s ease-in-out;
 }
 
-.dgmHeaderIcon {
+.dgm_header_wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+}
+
+.dgm_header_left {
+  display: flex;
+  align-items: center;
+}
+
+.dgm_header_right {
+  width: 100%;
+}
+
+.dgm_header_icon {
   width: 22px;
   height: 22px;
   filter: drop-shadow(1px 1px 2px #aaa);
+
 }
 
-.dgmHeaderTitle {
+.dgm_header_title {
   color: #2D2D2D;
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
+  margin-left: 12px;
 }
 
-.dgmGraph {
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0);
-  background: rgba(255, 255, 255, 0.3);
-  box-shadow: 
-    0 8px 16px rgba(0, 0, 0, 0.14),
-    0 0 2px rgba(52, 37, 255, 1);
-  backdrop-filter: blur(9.1px);
-  padding: 0 12px;
-  transition: all 0.2s ease-in-out;
-}
