--- a/src/Components/HeaderComponents/UserInfoComponent.module.css
+++ b/src/Components/HeaderComponents/UserInfoComponent.module.css
@@ -1,4 +1,4 @@
-.user-info {
+.user_info {
   flex-shrink: 0;
   display: flex;
   align-items: center;
@@ -7,36 +7,43 @@
   gap: 12px;
 }
 
-.bell-icon {
+.bell_icon {
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
+  background: transparent;
+  padding: 0;
 }
 
-.profile-img {
+.profile_img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
 }
 
-.user-details {
+.userinfo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.user_details {
   line-height: 1.2;
+  text-align: left;
 }
 
 .username {
-  color: var(--Gray-700, #344054);
+  color: #344054;
   font-size: 14px;
   font-weight: 600;
+  margin: 0;
 }
 
 .role {
   font-size: 13px;
   color: #6c757d;
-}
-
-.dropdown-icon {
-  color: #444;
-  cursor: pointer;
+  margin: 0;
 }
